// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|InputAlert error 1`] = `
.emotion-1 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.4;
  color: #000000;
}

.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.38;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #ffffff;
  padding: 12px;
  margin-top: calc(8px + 0.75rem);
  position: relative;
  border-radius: 3px;
  background-color: #db1818;
}

.emotion-0:before {
  position: absolute;
  content: '';
  top: -8px;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-bottom: 8px solid black;
}

.emotion-0:before {
  border-bottom-color: #db1818;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Error messages should be used to tell users both what the problem is
          and how they can resolve it. Error messages are best suited to
          senarios when users need to take action to continue.
  </div>
</div>
`;

exports[`Storyshots Elements|InputAlert notification 1`] = `
.emotion-1 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.4;
  color: #000000;
}

.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.38;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #ffffff;
  padding: 12px;
  margin-top: calc(8px + 0.75rem);
  position: relative;
  border-radius: 3px;
  background-color: #65717b;
}

.emotion-0:before {
  position: absolute;
  content: '';
  top: -8px;
  width: 0;
  height: 0;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-bottom: 8px solid black;
}

.emotion-0:before {
  border-bottom-color: #65717b;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    This is an example of a long notification, these notifications should
          be used in order to give users an instruction, or make users aware of
          a consequence of their decision. These should be used only if
          needed.
  </div>
</div>
`;
